[package]
name = "aide-de-camp-memory"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = { version = "0.2.0", features = ["runner"] }
async-trait = "0.1.52"
bincode = "2.0.0-rc.1"
tracing = "0.1.30"
tokio = { version = "1", features = ["macros", "sync"] }

[dev-dependencies]
tracing-subscriber = "0.3.8"
